# sr_benchmarking

./: CMakeLists.txt  LICENSE  README.md  aws.yml  circle.yml  jenkins.yml  package.xml  repository.rosinstall
docs/: Makefile  conf.py  index.md
docs/user_guide/: 1_installing_the_software.md  2_benchmark_description.md  2_motion_planners.md  3_benchmark_description.md  3_running_an_experiment.md  4_running_an_experiment.md  5_visualizing_the_results.md  6_analysing_the_results.md
release/: dockerfile
sr_benchmarking/: .catkin_lint_ignore  CMakeLists.txt  package.xml
sr_benchmarking/src/sr_benchmarking/: run_benchmarking.py  sr_benchmarking.py
sr_benchmarking_msgs/: CMakeLists.txt  package.xml
sr_benchmarking_msgs/srv/: ExecuteBenchmarking.srv
sr_moveit_planner_benchmarking/: CMakeLists.txt  README.md  package.xml  setup.py
sr_moveit_planner_benchmarking/benchmark_configs/: scene_ground.yaml  scene_ground_with_boxes.yaml  scene_table.yaml  scene_table_with_objects.yaml  scene_table_with_tote.yaml  scene_table_with_two_totes.yaml
sr_moveit_planner_benchmarking/data/: example_benchmark.db  move_arm_to_poses.py  scene_ground_with_boxes.queries  scene_ground_with_boxes.yaml
sr_moveit_planner_benchmarking/experiments/: benchmark_table_with_two_totes.launch
sr_moveit_planner_benchmarking/experiments/benchmark_configs/: scene_ground.yaml  scene_ground_random.yaml  scene_ground_with_boxes.yaml  scene_table.yaml  scene_table_with_objects.yaml  scene_table_with_tote.yaml  scene_table_with_two_totes.yaml  scene_table_with_two_totes_random.yaml
sr_moveit_planner_benchmarking/experiments/launch/: benchmark_ground.launch  benchmark_ground_with_boxes.launch  benchmark_table.launch  benchmark_table_with_objects.launch  benchmark_table_with_tote.launch  benchmark_table_with_two_totes.launch  benchmarking_parameters.launch  load_all_scenes_and_queries_to_db.launch
sr_moveit_planner_benchmarking/experiments/queries/: scene_ground.queries  scene_ground_random.queries  scene_ground_with_boxes.queries  scene_ground_with_boxes_random.queries  scene_table.queries  scene_table_random.queries  scene_table_with_objects.queries  scene_table_with_objects_random.queries  scene_table_with_tote.queries  scene_table_with_tote_random.queries  scene_table_with_two_totes.queries  scene_table_with_two_totes_random.queries
sr_moveit_planner_benchmarking/experiments/results/: benchmark.db  scene_ground_benchmark.db  scene_ground_with_boxes_benchmark.db  scene_table_benchmark.db  scene_table_with_objects_benchmark.db  scene_table_with_tote_benchmark.db  scene_table_with_two_totes_benchmark.db  scene_table_with_two_totes_benchmark_2.db  scene_table_with_two_totes_random_benchmark.db
sr_moveit_planner_benchmarking/experiments/scenes/: scene_table.scene  scene_table_with_objects.scene
sr_moveit_planner_benchmarking/include/sr_moveit_planner_benchmarking/: SrBenchmarkExecutor.h
sr_moveit_planner_benchmarking/launch/: benchmarking.launch  benchmarks_visualizer.launch  export_queries_to_text.launch  export_scenes_to_text.launch  load_all_scenes_and_queries_to_db.launch  load_queries_to_db.launch  load_scenes_and_queries_to_db.launch  load_scenes_to_db.launch  robot.launch  sr_moveit_planner_benchmarking_gui.launch
sr_moveit_planner_benchmarking/queries/: scene_ground.queries  scene_ground_with_boxes.queries  scene_table_with_two_totes.queries
sr_moveit_planner_benchmarking/scenes/: scene_table_with_tote.scene  scene_table_with_two_totes.scene
sr_moveit_planner_benchmarking/scripts/sr_moveit_planner_benchmarking/: sr_moveit_planner_benchmarking_gui.py  sr_moveit_planner_convert_to_db.py
sr_moveit_planner_benchmarking/src/: SrBenchmarkExecutor.cpp  SrRunBenchmark.cpp  copyright_exclusions.cfg
sr_moveit_planner_benchmarking/src/sr_moveit_planner_benchmarking/: moveit_benchmarks_statistics_reference.py  moveit_planner_benchmarking_gui.py  moveit_planner_benchmarking_mplotlab.py  sr_moveit_planner_benchmarking_gui.py  testing_mpld3.py
sr_moveit_planner_benchmarking/test/: scene_ground_with_boxes_random.queries  test_cartesian_queries_to_import.queries  test_import_export_queries.py  test_import_export_queries.test  test_import_export_scenes.py  test_import_export_scenes.test  test_queries_to_import.queries  test_scene_to_import.scene
sr_moveit_planner_benchmarking/uis/: moveit_planner_benchmarking.ui
sr_planner_benchmarking/: package.xml
sr_planner_benchmarking/launch/: benchmarking.launch
sr_planner_benchmarking/src/sr_planner_benchmarking/: benchmark_planners.py  collision_scene_1.py  collision_scene_2.py
src/sr_benchmarking/: run_benchmarking.py  sr_benchmarking.py
