<?xml version="1.0"?>
<package>
  <name>sr_benchmarking_msgs</name>
  <version>0.0.0</version>
  <description>Contains benchmarking messages</description>
  <maintainer email="software@shadowrobot.com">Shadow Software Team</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
